--- a/public/config.json
+++ b/public/config.json
@@ -6,7 +6,8 @@
       "description": "Popular Bootstrap icon set with 1000+ icons",
       "cssPath": "./src/bootstrap-icons/style.css",
       "demoPath": "./src/bootstrap-icons/demo.html",
-      "count": 4158
+      "count": 4158,
+      "prefix": "bi"
     },
     {
       "id": "fontawesome",
@@ -14,7 +15,8 @@
       "description": "The world's most popular icon toolkit",
       "cssPath": "./src/fontawesome/style.css",
       "demoPath": "./src/fontawesome/demo.html",
-      "count": 0
+      "count": 0,
+      "prefix": "fa"
     },
     {
       "id": "material-icons",
@@ -22,7 +24,8 @@
       "description": "Google's Material Design icons",
       "cssPath": "./src/material-icons/style.css",
       "demoPath": "./src/material-icons/demo.html",
-      "count": 0
+      "count": 0,
+      "prefix": "material-icons"
     },
     {
       "id": "feather-icons",
@@ -30,7 +33,8 @@
       "description": "Simply beautiful open source icons",
       "cssPath": "./src/feather-icons/style.css",
       "demoPath": "./src/feather-icons/demo.html",
-      "count": 0
+      "count": 0,
+      "prefix": "feather"
     },
     {
       "id": "brands-icons",
@@ -38,7 +42,8 @@
       "description": "Premium icons for use in web, iOS, Android, and desktop apps",
       "cssPath": "./src/brands-icons/style.css",
       "demoPath": "./src/brands-icons/demo.html",
-      "count": 934
+      "count": 934,
+      "prefix": "icon"
     }
   ]
 }
